# authscope

./: .gitignore  ABOUT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/crapi/: README.md  config.yaml  openapi-minimal.yaml
examples/mock_api/: config.yaml  openapi.yaml  server.py
src/authscope/: cli.py
src/authscope/core/: models.py  safe_eval.py
src/authscope/dsl/: loader.py
src/authscope/engine/: runner.py
src/authscope/loaders/: har_loader.py  openapi_loader.py
src/authscope/reporters/: report.py
tests/: test_scenarios.py
